--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.20.1",
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
-    "twilio": "^5.10.0"
+    "twilio": "^5.10.0",
+    "@google-cloud/storage": "^7.7.0"
   }
 }
