--- a/vercel.json
+++ b/vercel.json
@@ -21,7 +21,7 @@
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "*"
+          "value": "https://dine-frontend-ecru.vercel.app"
         },
         {
           "key": "Access-Control-Allow-Methods",
@@ -34,6 +34,10 @@
         {
           "key": "Access-Control-Allow-Credentials",
           "value": "true"
+        },
+        {
+          "key": "Access-Control-Max-Age",
+          "value": "86400"
         }
       ]
     }
