--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/storage": "^7.7.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
@@ -24,10 +25,10 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.1",
     "openai": "^4.20.1",
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
-    "twilio": "^5.10.0",
-    "@google-cloud/storage": "^7.7.0"
+    "twilio": "^5.10.0"
   }
 }
