--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@apollo/server": "^5.0.0",
     "@google-cloud/storage": "^7.7.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
@@ -21,8 +22,12 @@
     "express": "^5.1.0",
     "firebase-admin": "^13.5.0",
     "google-auth-library": "^10.3.0",
+    "graphql": "^16.11.0",
+    "graphql-tag": "^2.12.6",
+    "graphql-tools": "^9.0.20",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "micro": "^10.0.1",
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.1",
