--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,9 @@ NODE_ENV=development
 PORT=3001
 FRONTEND_URL=http://localhost:3000
 
+# Feature Flags
+ENABLE_SUBDOMAIN=false
+
 # Admin Configuration
 ADMIN_EMAIL=admin@yourrestaurant.com
 ADMIN_PASSWORD=your-admin-password
