--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,7 @@ FRONTEND_URL=http://localhost:3000
 
 # Feature Flags
 ENABLE_SUBDOMAIN=false
+ENABLE_HOTEL_MODE=true
 
 # Admin Configuration
 ADMIN_EMAIL=admin@yourrestaurant.com
