--- a/vercel.json
+++ b/vercel.json
@@ -35,6 +35,10 @@
         {
           "key": "Access-Control-Max-Age",
           "value": "86400"
+        },
+        {
+          "key": "Vary",
+          "value": "Origin"
         }
       ]
     }
