--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.1",
     "openai": "^4.20.1",
+    "pusher": "^5.3.2",
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "twilio": "^5.10.0"
