--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,15 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 # JWT Secret
 JWT_SECRET=your-jwt-secret-key
 
-# Razorpay (Payment Gateway)
+# Razorpay (Payment Gateway - Indian payments)
 RAZORPAY_KEY_ID=your-razorpay-key-id
 RAZORPAY_KEY_SECRET=your-razorpay-key-secret
+
+# Dodo Payments (International payments)
+DODO_PAYMENTS_API_KEY=your-dodo-payments-api-key
+DODO_WEBHOOK_KEY=your-dodo-webhook-secret-key
+DODO_PRODUCT_ID_SPARK=pdt_0NYkVJEF5ywGL040N55IY
+DODO_PRODUCT_ID_FLAME=pdt_0NYkVvCPauMPQSMaIzqTS
 
 # Twilio (SMS/OTP)
 TWILIO_ACCOUNT_SID=your-twilio-account-sid
