--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "dodopayments": "^2.19.1",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "firebase-admin": "^13.5.0",
@@ -35,6 +36,7 @@
     "pusher": "^5.3.2",
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
+    "standardwebhooks": "^1.0.0",
     "twilio": "^5.10.0",
     "xlsx": "^0.18.5"
   }
